replace stmp logic with resend and add auth for admin page
