# internal/modules/auth/routes.go
@@ -8,6 +8,7 @@ func RegisterRoutes(r *gin.RouterGroup, h *Handler) {
 		authRoutes.POST("/register", h.Register)
 		authRoutes.POST("/login", h.Login)
 		authRoutes.POST("/social", h.SocialAuth)
+		authRoutes.GET("/verify", h.VerifyEmailPage)
 		authRoutes.GET("/verify-email", h.VerifyEmail)
 		authRoutes.POST("/forgot-password", h.ForgotPassword)
 		authRoutes.POST("/verify-reset-code", h.VerifyResetCode)
